--- a/yolo-service/configs/dataset.yaml
+++ b/yolo-service/configs/dataset.yaml
@@ -1,12 +1,13 @@
-# Dataset configuration for Dengue Breeding Site Detection
-path: C:\Users\manolo\Documents\Tesis\Yolov11\data  # dataset root dir (absolute path)
-train: images/train  # train images (relative to 'path')
-val: images/val  # val images (relative to 'path')
-test: images/test  # test images (optional)
+path: C:\Users\manolo\Documents\Tesis\yolo-service\data
+train: images/train
+val: images/val
+test: images/test
 
-# Classes for dengue breeding site detection
 names:
-  0: huecos                    # Holes/cavities that collect water
-  1: charcos_cumulos_agua      # Water puddles/stagnant water accumulations  
-  2: calles_rotas_mal_hechas   # Broken/poorly constructed streets that retain water
-  3: basura_basurales          # Garbage dumps/waste accumulations
+  0: Basura
+  1: Calles mal hechas
+  2: Charcos/Cumulo de agua
+  3: Huecos
+
+task: segment
+nc: 4
