--- a/yolo-service/requirements.txt
+++ b/yolo-service/requirements.txt
@@ -24,6 +24,7 @@ matplotlib>=3.5.0
 # jupyter>=1.0.0
 # notebook>=6.4.0
 
-# Opcional: API web
-# fastapi>=0.103.0
-# uvicorn>=0.23.2
+# API web (habilitado para integración)
+fastapi>=0.103.0
+uvicorn>=0.23.2
+python-multipart>=0.0.6
