feat: complete system optimization with shared library and modern image support

--- a/yolo-service/configs/dataset.yaml
+++ b/yolo-service/configs/dataset.yaml
@@ -6,7 +6,7 @@ test: images/test
 names:
   0: Basura
   1: Calles mal hechas
-  2: Charcos/Cumulo de agua
+  2: Charcos/Cumulos de agua
   3: Huecos
 
 task: segment
