--- a/backend/configs/alembic.ini
+++ b/backend/configs/alembic.ini
@@ -35,7 +35,7 @@ prepend_sys_path = .
 
 # version number format.  This value is also used
 # for new migration filename format
-version_num_format = %04d
+version_num_format = %%04d
 
 # set to 'true' to search source files recursively
 # in each "version_locations" directory
