--- a/yolo-service/configs/dataset.yaml
+++ b/yolo-service/configs/dataset.yaml
@@ -1,4 +1,4 @@
-path: C:\Users\manolo\Documents\Tesis\yolo-service\data
+path: ./data
 train: images/train
 val: images/val
 test: images/test
@@ -6,7 +6,7 @@ test: images/test
 names:
   0: Basura
   1: Calles mal hechas
-  2: Charcos/Cumulo de agua
+  2: Charcos/Cumulos de agua
   3: Huecos
 
 task: segment
