chore: update project configuration and documentation

--- a/.env.example
+++ b/.env.example
@@ -2,13 +2,21 @@
 # Copy this file to .env and update values for your environment
 
 # =============================================================================
+# DOCKER CONFIGURATION
+# =============================================================================
+# Set to 'true' when running with Docker, 'false' for local development
+USE_DOCKER=false
+
+# =============================================================================
 # PORT CONFIGURATION
 # =============================================================================
 BACKEND_PORT=8000
 YOLO_SERVICE_PORT=8001
 FRONTEND_PORT=3000
 
-# Service URLs (automatically constructed from ports above)
+# Service URLs
+# For Docker: use service names (backend, yolo-service)
+# For Local: use localhost
 BACKEND_URL=http://localhost:${BACKEND_PORT}
 YOLO_SERVICE_URL=http://localhost:${YOLO_SERVICE_PORT}
 FRONTEND_URL=http://localhost:${FRONTEND_PORT}
@@ -16,7 +24,17 @@ FRONTEND_URL=http://localhost:${FRONTEND_PORT}
 # =============================================================================
 # DATABASE CONFIGURATION
 # =============================================================================
-DATABASE_URL=postgresql://postgres:password@localhost:5432/sentrix
+# PostgreSQL Configuration
+POSTGRES_DB=sentrix
+POSTGRES_USER=sentrix_user
+POSTGRES_PASSWORD=sentrix_password_change_in_production
+POSTGRES_PORT=5432
+
+# Database URL
+# For Docker: postgresql://sentrix_user:password@postgres:5432/sentrix
+# For Local: postgresql://postgres:password@localhost:5432/sentrix
+DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@localhost:5432/${POSTGRES_DB}
+
 DATABASE_POOL_SIZE=10
 DATABASE_MAX_OVERFLOW=20
 DATABASE_POOL_RECYCLE=300
