--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -41,6 +41,9 @@ storage3==2.19.0
 realtime==2.19.0
 supabase-auth==2.19.0
 
+# Rate Limiting
+slowapi==0.1.9
+
 # Development and Testing
 pytest==7.4.3
 pytest-asyncio==0.21.1
