fix: exclude MSW from production and fix PWA config

--- a/frontend/.vercelignore
+++ b/frontend/.vercelignore
@@ -43,3 +43,7 @@ lerna-debug.log*
 .cache/
 .parcel-cache/
 .vite/
+
+# Mock Service Worker (desarrollo local solamente)
+public/mockServiceWorker.js
+src/mocks/
