fix: disable PWA plugin to resolve deployment issues

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -9,6 +9,13 @@
   "cleanUrls": true,
   "trailingSlash": false,
 
+  "build": {
+    "env": {
+      "NODE_ENV": "production",
+      "VITE_ENABLE_MOCKING": "false"
+    }
+  },
+
   "rewrites": [
     {
       "source": "/api/:path*",
