--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -35,6 +35,6 @@
     }
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist", "build"],
+  "exclude": ["node_modules", "dist", "build", "src/mocks/**/*"],
   "references": [{ "path": "./tsconfig.node.json" }]
 }
