--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "description": "Frontend de la plataforma Sentrix - Sistema integral para detección de criaderos de Aedes aegypti",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "tsc -p tsconfig.build.json && vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "typecheck": "tsc --noEmit",
@@ -51,10 +51,11 @@
     "@tailwindcss/typography": "^0.5.10",
     "@types/dompurify": "^3.0.3",
     "@types/js-cookie": "^3.0.4",
-    "@types/leaflet": "^1.9.7",
+    "@types/leaflet": "^1.9.20",
     "@types/mime-types": "^2.1.2",
+    "@types/node": "^24.6.2",
     "@types/react": "^18.2.15",
-    "@types/react-dom": "^18.2.7",
+    "@types/react-dom": "^18.3.7",
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
