--- a/frontend/package.json
+++ b/frontend/package.json
@@ -6,7 +6,7 @@
   "description": "Frontend de la plataforma Sentrix - Sistema integral para detección de criaderos de Aedes aegypti",
   "scripts": {
     "dev": "vite",
-    "build": "tsc -p tsconfig.build.json && vite build",
+    "build": "vite build",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "lint:fix": "eslint . --ext ts,tsx --fix",
     "typecheck": "tsc --noEmit",
