--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -11,6 +11,7 @@ psycopg2-binary==2.9.9
 # PostGIS and Geospatial
 geoalchemy2==0.18.0
 shapely==2.0.2
+numpy<2.0
 
 # Authentication and Security
 python-jose[cryptography]==3.3.0
