--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -12,7 +12,8 @@
   "build": {
     "env": {
       "NODE_ENV": "production",
-      "VITE_ENABLE_MOCKING": "false"
+      "VITE_ENABLE_MOCKING": "false",
+      "VITE_API_BASE_URL": ""
     }
   },
 
