feat: auto-detect and use latest trained YOLO model

--- a/.gitignore
+++ b/.gitignore
@@ -81,4 +81,16 @@ secrets/
 
 # PowerShell scripts outputs
 *.ps1
-.log
+
+# Temporary files
+*.png
+*.jpg
+*.jpeg
+!frontend/public/**/*.png
+!frontend/public/**/*.jpg
+!frontend/public/**/*.jpeg
+
+# Documentation (keep only main README)
+DEPLOYMENT_*.md
+PRODUCTION_*.md
+PREVENTION_*.md
