build: configure deployment and continuous integration
- Add Redis to docker-compose for rate limiting and Celery
- Update environment variable templates for production
- Configure frontend environment variables for production

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 # ==========================================
 # Sentrix - Environment Variables Template
+# Para Dockploy (Backend + YOLO + PostgreSQL + Redis)
 # ==========================================
 
 # ==========================================
@@ -12,6 +13,7 @@ POSTGRES_PASSWORD=CHANGE_ME_STRONG_PASSWORD_HERE
 # ==========================================
 # Backend Security
 # ==========================================
+# Genera keys seguras con: openssl rand -hex 32
 SECRET_KEY=CHANGE_ME_SECRET_KEY_HERE
 JWT_SECRET_KEY=CHANGE_ME_JWT_SECRET_HERE
 
@@ -25,13 +27,21 @@ SUPABASE_SERVICE_ROLE_KEY=sb_secret_TU_SECRET_AQUI
 # ==========================================
 # Frontend & Deployment
 # ==========================================
-# URL del frontend (Vercel)
-FRONTEND_URL=https://sentrix-jade.vercel.app
+# URL del frontend desplegado en Vercel
+FRONTEND_URL=https://sentrix.vercel.app
 
-DOKPLOY_DOMAIN=sentrix.ejemplo.com
+# Dominio de tu backend en Dockploy
+DOKPLOY_DOMAIN=sentrix-api.tu-dominio.com
 
 # ==========================================
 # Environment & Logging
 # ==========================================
 ENVIRONMENT=production
 LOG_LEVEL=INFO
+
+# ==========================================
+# NOTAS IMPORTANTES
+# ==========================================
+# Redis y DATABASE_URL se configuran automáticamente en docker-compose.yml
+# No necesitas agregar REDIS_URL aquí, se configura internamente
+# El frontend en Vercel necesita: VITE_API_BASE_URL=https://${DOKPLOY_DOMAIN}
