--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,6 +1,18 @@
 # Backend Configuration
 # Copy this file to .env and fill in your values
 
+# Database
+DATABASE_URL=postgresql://user:password@localhost:5432/sentrix
+
+# Redis (for rate limiting and Celery)
+REDIS_URL=redis://localhost:6379/0
+
+# Security
+SECRET_KEY=your-secret-key-here-change-me
+JWT_SECRET_KEY=your-jwt-secret-key-here-change-me
+ALGORITHM=HS256
+ACCESS_TOKEN_EXPIRE_MINUTES=30
+
 # Supabase Configuration
 SUPABASE_URL=https://your-project.supabase.co
 SUPABASE_KEY=your-anon-key
@@ -13,9 +25,11 @@ YOLO_SERVICE_URL=http://localhost:8001
 ENVIRONMENT=development
 DEBUG=true
 LOG_LEVEL=INFO
+PORT=8000
 
 # CORS Settings
-CORS_ORIGINS=http://localhost:3000,http://localhost:5173
+ALLOWED_ORIGINS=http://localhost:3000,http://localhost:5173
 
-# Optional: Database direct connection (if not using Supabase)
-# DATABASE_URL=postgresql://user:password@localhost:5432/sentrix
+# File Upload
+MAX_FILE_SIZE=10485760
+ALLOWED_EXTENSIONS=["jpg","jpeg","png","tiff","bmp"]
