--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,7 +1,12 @@
 # Sentrix Frontend - Variables de Entorno
 
 # APIs y Servicios
+# Para desarrollo local:
 VITE_API_BASE_URL=http://localhost:8000
+# Para producción en Vercel, usa la URL de tu backend en Dockploy:
+# VITE_API_BASE_URL=https://tu-backend.dockploy.com
+
+# YOLO Service (solo para desarrollo, el frontend NO accede directamente en producción)
 VITE_YOLO_SERVICE_URL=http://localhost:8001
 
 # Configuración de Desarrollo
