fix: configure Docker build context for shared library
- Change backend build context to project root
- Update COPY paths in Dockerfile to work with new context
- Fixes shared library installation in Docker

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -50,8 +50,8 @@ services:
   # ==========================================
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: backend/Dockerfile
     container_name: sentrix-backend
     restart: unless-stopped
     depends_on:
