--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -18,7 +18,7 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libgeos-dev \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy shared library first (needed for requirements.txt)
+# Copy shared library first
 COPY shared /build/shared
 
 # Copy backend requirements
@@ -27,8 +27,16 @@ COPY backend/requirements.txt .
 # Create virtual environment and install dependencies
 RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+
+# Upgrade pip
+RUN pip install --no-cache-dir --upgrade pip
+
+# Install shared library first (as editable)
+RUN pip install --no-cache-dir -e /build/shared
+
+# Install other requirements (excluding shared which is already installed)
+RUN grep -v "^\-e.*shared" requirements.txt > requirements-docker.txt && \
+    pip install --no-cache-dir -r requirements-docker.txt
 
 # ============================================
 # Stage 2: Runtime
@@ -59,6 +67,9 @@ WORKDIR /app
 
 # Copy virtual environment from builder
 COPY --from=builder /opt/venv /opt/venv
+
+# Copy shared library (needed because it's installed as editable)
+COPY --from=builder --chown=appuser:appuser /build/shared /app/shared
 
 # Copy application code from backend directory
 COPY --chown=appuser:appuser backend/ .
