fix: apply shared library fix to YOLO service
- Change YOLO build context to project root
- Install shared library separately in YOLO Dockerfile
- Copy shared to runtime stage
- Update COPY paths for new context

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -112,8 +112,8 @@ services:
   # ==========================================
   yolo:
     build:
-      context: ./yolo-service
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: yolo-service/Dockerfile
     container_name: sentrix-yolo
     restart: unless-stopped
     environment:
