--- a/yolo-service/Dockerfile
+++ b/yolo-service/Dockerfile
@@ -20,14 +20,25 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     libgomp1 \
     && rm -rf /var/lib/apt/lists/*
 
-# Copy requirements
-COPY requirements.txt .
+# Copy shared library first
+COPY shared /build/shared
+
+# Copy yolo-service requirements
+COPY yolo-service/requirements.txt .
 
 # Create virtual environment and install dependencies
 RUN python -m venv /opt/venv
 ENV PATH="/opt/venv/bin:$PATH"
-RUN pip install --no-cache-dir --upgrade pip && \
-    pip install --no-cache-dir -r requirements.txt
+
+# Upgrade pip
+RUN pip install --no-cache-dir --upgrade pip
+
+# Install shared library first (as editable)
+RUN pip install --no-cache-dir -e /build/shared
+
+# Install other requirements (excluding shared which is already installed)
+RUN grep -v "^\-e.*shared" requirements.txt > requirements-docker.txt && \
+    pip install --no-cache-dir -r requirements-docker.txt
 
 # ============================================
 # Stage 2: Runtime
@@ -62,8 +73,11 @@ WORKDIR /app
 # Copy virtual environment from builder
 COPY --from=builder /opt/venv /opt/venv
 
-# Copy application code
-COPY --chown=appuser:appuser . .
+# Copy shared library (needed because it's installed as editable)
+COPY --from=builder --chown=appuser:appuser /build/shared /app/shared
+
+# Copy application code from yolo-service directory
+COPY --chown=appuser:appuser yolo-service/ .
 
 # Switch to non-root user
 USER appuser
