--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -59,11 +59,12 @@ jobs:
           REDIS_URL: redis://localhost:6379/0
         run: |
           pytest tests/ \
-            -m "not integration" \
+            -m "not integration and not database and not performance" \
             --cov=src \
             --cov-report=term-missing \
             --cov-report=xml \
             --cov-report=html \
+            --cov-fail-under=60 \
             -v
 
       - name: Upload coverage to Codecov
