--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,55 +1,31 @@
 {
     "framework": "vite",
-    "headers": [
+    "routes": [
         {
-            "source": "/assets/js/(.*)",
-            "headers": [
-                {
-                    "key": "Content-Type",
-                    "value": "application/javascript; charset=utf-8"
-                },
-                {
-                    "key": "Cache-Control",
-                    "value": "public, max-age=31536000, immutable"
-                }
-            ]
+            "src": "/assets/js/(.*)",
+            "headers": {
+                "Content-Type": "application/javascript; charset=utf-8",
+                "Cache-Control": "public, max-age=31536000, immutable"
+            }
         },
         {
-            "source": "/(.*).js",
-            "headers": [
-                {
-                    "key": "Content-Type",
-                    "value": "application/javascript; charset=utf-8"
-                }
-            ]
+            "src": "/(.*)\\.js",
+            "headers": {
+                "Content-Type": "application/javascript; charset=utf-8"
+            }
         },
         {
-            "source": "/(.*).mjs",
-            "headers": [
-                {
-                    "key": "Content-Type",
-                    "value": "application/javascript; charset=utf-8"
-                }
-            ]
+            "src": "/(.*)\\.mjs",
+            "headers": {
+                "Content-Type": "application/javascript; charset=utf-8"
+            }
         },
         {
-            "source": "/assets/css/(.*)",
-            "headers": [
-                {
-                    "key": "Content-Type",
-                    "value": "text/css; charset=utf-8"
-                },
-                {
-                    "key": "Cache-Control",
-                    "value": "public, max-age=31536000, immutable"
-                }
-            ]
-        }
-    ],
-    "rewrites": [
+            "handle": "filesystem"
+        },
         {
-            "source": "/(.*)",
-            "destination": "/index.html"
+            "src": "/(.*)",
+            "dest": "/index.html"
         }
     ]
 }
