--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -87,8 +87,8 @@ services:
       # YOLO Service (internal network)
       YOLO_SERVICE_URL: http://yolo:8001
 
-      # CORS - actualizar con tu dominio de Dokploy
-      ALLOWED_ORIGINS: ${FRONTEND_URL},https://${DOKPLOY_DOMAIN}
+      # CORS - Se usa el default hardcodeado en config.py
+      # ALLOWED_ORIGINS: ${FRONTEND_URL},https://${DOKPLOY_DOMAIN}
 
       # Logging
       LOG_LEVEL: ${LOG_LEVEL:-INFO}
