fix: use dokploy-network for all services

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -144,7 +144,8 @@ services:
 
 networks:
   sentrix-network:
-    driver: bridge
+    external: true
+    name: dokploy-network
 
 volumes:
   postgres_data:
