fix: add API proxy to backend.sentrix.pro in Vercel config
Configure rewrite rule to proxy /api/* requests to backend.sentrix.pro
This fixes API calls from sentrix.vercel.app to the backend

--- a/frontend/vercel.json
+++ b/frontend/vercel.json
@@ -1,5 +1,11 @@
 {
     "framework": "vite",
+    "rewrites": [
+        {
+            "source": "/api/:path*",
+            "destination": "https://backend.sentrix.pro/api/:path*"
+        }
+    ],
     "routes": [
         {
             "src": "/assets/js/(.*)",
